[package]
name = "lethe"
version = "0.2.3-dev"
authors = ["Konstantin Alexandroff <k.alexandroff@gmail.com>"]
description = "A secure, free, cross-platform and open-source drive wiping utility"
homepage = "https://github.com/Kostassoid/lethe"
repository = "https://github.com/Kostassoid/lethe"
categories = ["command-line-utilities"]
keywords = ["security", "command-line", "disk", "erase", "storage"]
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "Kostassoid/lethe", branch = "master" }

[dependencies]
nix = "0.14.1"
clap = "~2.33"
rand = "0.7.0"
rand_chacha = "0.2.1"
indicatif = "0.11.0"
console = "0.7.7"
prettytable-rs = "^0.8"
streaming-iterator = "0.1.4"
regex = "1"
ctrlc = { version = "3.0", features = ["termination"] }
blake2 = "0.8"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
#mockers_derive = "0.21.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["fileapi", "sysinfoapi", "minwindef", "winbase", "winerror", "ws2def", "ws2ipdef"]

[target.'cfg(macos)'.dependencies]
mach = "0.1.1"
IOKit-sys = "0.1"

[dev-dependencies]
flate2 = "1.0"
assert_matches = "1.3"
#mockers = "0.21.0"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
incremental = true
debug-assertions = true
debug = true
