[package]
name = "lethe_library_demo"
version = "0.1.0"
authors = ["kostassoid <k.alexandroff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lethe = { git = "https://github.com/Kostassoid/lethe", branch = "extract-to-library" }
